--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "require": {
         "php": ">=5.5.0",
-        "elasticsearch/elasticsearch": "^7.6"
+        "../../elasticsearch/elasticsearch": "^7.6"
     },
     "autoload": {
         "psr-4": {
